# VTFLib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  FileReader.h  FileWriter.h  MemoryReader.cpp  MemoryReader.h  MemoryWriter.cpp  MemoryWriter.h  ProcReader.cpp  ProcReader.h  ProcWriter.cpp  ProcWriter.h  Reader.h  VMTFile.cpp  VMTFile.h  VMTWrapper.cpp  VMTWrapper.h  VTFFile.cpp  VTFFile.h  VTFLib.cpp  VTFLib.h  VTFWrapper.cpp  VTFWrapper.h  Writer.h  stdafx.h  txc_dxtn.h
src/unix/: FileReader.cpp  FileWriter.cpp  VTFLib.cpp
src/windows/: FileReader.cpp  FileWriter.cpp  VTFLib.cpp
